fixed the src -> dist image and base files issue

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rimraf dist/* && mkdirp 'dist/css' 'dist/js' 'dist/img'",
     "build:sass": "node-sass-chokidar --source-map true src/scss/*.scss -o dist/css",
     "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
-    "build:js": "browserify src/js/*.js | uglifyjs > dist/js/",
-    "build:img": "copyfiles src/img dist/img",
-    "build:src": "copyfiles src/*.* dist/*.*",
+    "build:js": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
+    "build:img": "copyfiles -u 1 src/img/* dist",
+    "build:src": "copyfiles -u 1 src/* dist",
     "build": "npm-run-all -s clean -p build:*",
     "watch:sass": "chokidar 'src/scss/**/*' -c 'npm run build:sass'",
     "watch:js": "chokidar 'src/js/**/*' -c 'npm run build:js'",
