--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "author": "Mike Fitzbaxter",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^4.1.0",
     "express": "^4.16.4",
     "nunjucks": "^3.1.4"
   },
