added app.js to build pipeline to better segregate app from boilerplate framework.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist/* && mkdirp 'dist/css' 'dist/js' 'dist/img'",
     "build:sass": "node-sass-chokidar --source-map true src/scss/*.scss -o dist/css",
     "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
-    "build:js": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
+    "build:js-main": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
+    "build:js-app":  "browserify src/js/app.js | uglify > dist/js/app.js",
     "build:img": "copyfiles -u 1 src/img/* dist",
     "build:src": "copyfiles -u 1 src/* dist",
     "build": "npm-run-all -s clean -p build:*",
