fix typo for browserify | uglifyjs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist/* && mkdirp 'dist/css' 'dist/js' 'dist/img'",
     
     "js:main": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
-    "js:app":  "browserify src/js/app.js | uglify > dist/js/app.js",
+    "js:app":  "browserify src/js/app.js | uglifyjs > dist/js/app.js",
     
     "build:sass": "node-sass-chokidar --source-map true src/scss/*.scss -o dist/css",
       "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
