--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules
 npm-debug.log
 
-#yarn build artifacts
+# yarn build artifacts
 yarn.lock
 yarn-error.log
 
@@ -18,3 +18,6 @@ docker-compose.yml
 #sublime-text
 *.sublime-project
 *.sublime-workspace
+
+# dist and public folders
+/dist
