--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "clean": "rimraf ./dist && mkdirp 'dist' 'dist/css' 'dist/js' 'dist/img' 'dist/font'",
     
-    "js:main": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
-    "js:app" : "browserify src/js/app.js | uglifyjs > dist/js/app.js",
-    
+    "js:main" : "browserify src/js/main.js | uglifyjs > dist/js/main.js",
+    "js:app"  : "browserify src/js/app.js | uglifyjs > dist/js/app.js",
+    "js:other": "copyfiles -u 1 src/js/* dist",
+        
     "build:sass": "node-sass-chokidar --source-map true src/scss/*.scss -o dist/css",
         "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
     "build:js"  : "npm-run-all -p js:*",
