--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev-run": "nodemon --ignore dist/ --ignore src/ --ignore views ./bin/www",
     
     "dev"  : "npm run build && npm-run-all -p watch dev-run",
+        "predev": "npm config set scripts-prepend-node-path true",
     "start": "node ./bin/www",
     "test" : "mocha './test/**/*.js'"
   },
