--- a/package.json
+++ b/package.json
@@ -35,33 +35,33 @@
         "predev": "npm config set scripts-prepend-node-path true",
     "start": "node ./bin/www",
     "test" : "mocha './test/**/*.js'",
-    "postinstall": "npm run build",
+    "postinstall": "npm run build"
   },
   "author": "Mike Fitzbaxter",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "browserify": "^16.2.3",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "morgan": "^1.9.1",
-    "nunjucks": "^3.1.4",
+    "nunjucks": "^3.1.4"
+  },
+  "devDependencies": {
     "autoprefixer": "^9.3.1",
-    "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "chokidar-cli": "^1.2.1",
     "copyfiles": "^2.1.0",
     "mkdirp": "^0.5.1",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.0.1",
-    "rimraf": "^2.6.2",
-    "uglify-js": "^3.4.9",
-  },
-  "devDependencies": {
     "mocha": "^5.2.0",
     "node-sass-chokidar": "^1.3.4",
     "nodemon": "^1.18.6",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.0.1",
+    "rimraf": "^2.6.2",
+    "uglify-js": "^3.4.9"
   }
 }
