--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # environment variables
 
 #App settings
-APP_NAME=
-APP_TITLE=
+APP_NAME=MFB-Boilerplate
+APP_TITLE=MFB Boilerplate
 APP_SECRET=
 
 # Google analytics account
-GOOGLE_ANALYTICS=
+GA=
 
 # Auth0 settings
 AUTH0_CLIENT=
