Updating .env again

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # environment variables
 
-#App settings
-APP_NAME= MFB-Boilerplate
-APP_TITLE= MFB Boilerplate
-APP_SECRET= 
+# App settings
+APP_NAME=   "MFB-Boilerplate"
+APP_TITLE=  "MFB Boilerplate"
+APP_SECRET= ""
 
 # Google analytics account
-GA= 
+GA= ""
 
 # Auth0 settings
-AUTH0_CLIENT= 
-AUTH0_SECRET= 
-AUTH0_CALLBACK= 
+AUTH0_CLIENT=   ""
+AUTH0_SECRET=   ""
+AUTH0_CALLBACK= ""
