--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "debug": "^4.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "helmet": "^3.15.0",
     "morgan": "^1.9.1",
-    "nunjucks": "^3.1.4"
+    "nunjucks": "^3.1.4",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.3.1",
