Better examples in .env-template

--- a/.env-template
+++ b/.env-template
@@ -10,6 +10,7 @@ APP_SECRET= <INSERT RANDOM HASH OR KEY HERE>
 GA= ""
 
 # Auth0 settings - if using AUTH0
+AUTH0_DOMAIN=   ""
 AUTH0_CLIENT=   ""
 AUTH0_SECRET=   ""
-AUTH0_CALLBACK= ""
+AUTH0_CALLBACK= "callback"
