--- a/.env-template
+++ b/.env-template
@@ -3,6 +3,7 @@
 # App settings
 APP_NAME=   <APP_NAME>
 APP_TITLE=  <APP_TITLE>
+APP_URL=    <APP_URL>
 # http://md5.my-addr.com/online_random_md5_hash_generator-and-md5_random_hash.php
 APP_SECRET= <INSERT RANDOM HASH OR KEY HERE>
 
