adding in a default app secret to the .env-template file

--- a/.env-template
+++ b/.env-template
@@ -4,13 +4,13 @@
 APP_URL=    <APP_URL>
 APP_NAME=   <APP_NAME>
 APP_TITLE=  <APP_TITLE>
-APP_SECRET= <INSERT RANDOM HASH OR KEY HERE>
+APP_SECRET= "funky cold medina"
 # http://md5.my-addr.com/online_random_md5_hash_generator-and-md5_random_hash.php
 
 # Google analytics account - if using Google Analytics
 GA= ""
 
-# Auth0 settings - if using AUTH0
+# Auth0 settings (if using AUTH0 for authentication)
 AUTH0_DOMAIN=   ""
 AUTH0_CLIENT=   ""
 AUTH0_SECRET=   ""
