--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
     "node": "10.13.0"
   },
   "scripts": {
-    "clean": "rimraf ./dist && mkdirp 'dist' 'dist/css' 'dist/js' 'dist/img' 'dist/font'",
+    "clean": "rimraf dist && mkdirp dist dist/css dist/js dist/img dist/font",
     "js:main": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
     "js:app": "browserify src/js/app.js | uglifyjs > dist/js/app.js",
-    "js:other": "copyfiles -u 1 src/js/**/* dist",
+    "js:other": "copyfiles -e **/_*.js -u 1 ./src/js/**/* dist",
     "build:sass": "node-sass src/scss -o dist/css",
     "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
-    "build:js": "npm-run-all -p js:*",
-    "build:img": "copyfiles -u 1 src/img/**/* dist",
-    "build:font": "copyfiles -u 1 src/font/**/* dist",
-    "build:src": "copyfiles -u 1 src/* dist",
-    "watch:sass": "chokidar 'src/scss/**/*' -c 'npm run build:sass'",
-    "watch:js": "chokidar 'src/js/**/*' -c 'npm run build:js'",
-    "watch:img": "chokidar 'src/img/**/*' -c 'npm run build:img'",
-    "watch:font": "chokidar 'src/font/**/*' -c 'npm run build:font'",
-    "watch:src": "chokidar 'src/*' -c 'npm run build:src'",
+    "build:js": "npm-run-all -s js:other -p js:main js:app",
+    "build:img": "copyfiles -u 1 ./src/img/**/* dist",
+    "build:font": "copyfiles -u 1 ./src/font/**/* dist",
+    "build:src": "copyfiles -u 1 ./src/* dist",
+    "watch:sass": "chokidar src/scss/**/* -c npm run build:sass",
+    "watch:js": "chokidar src/js/**/*  -c npm run build:js",
+    "watch:img": "chokidar src/img/**/* -c npm run build:img",
+    "watch:font": "chokidar src/font/**/* -c npm run build:font",
+    "watch:src": "chokidar src/* -c npm run build:src",
     "build": "npm-run-all -s clean -p build:*",
     "watch": "npm-run-all -p watch:*",
     "dev-run": "nodemon --ignore dist/ --ignore src/ --ignore views ./bin/www",
     "dev": "npm run build && npm-run-all -p watch dev-run",
     "predev": "npm config set scripts-prepend-node-path true",
     "start": "node ./bin/www",
-    "test": "mocha './test/**/*.js'",
+    "test": "mocha ./test/**/*.js",
     "postinstall": "npm run build"
   },
   "author": "Mike Fitzbaxter",
