Updates to package.json to have nodemon watch the .env file - comes at the potential expense of some other file types no longer being watched (.coffeescript for example possible).

--- a/package.json
+++ b/package.json
@@ -2,34 +2,40 @@
   "name": "mfb-nodejs-boilerplate",
   "version": "1.0.0",
   "description": "A light-weight boilerplate for express with some basic build and watch scripts",
-  "main": "server.js",
+  "main": "./bin/www",
   "engines": {
     "node": "10.13.0"
   },
+  "nodemonConfig": {
+    "ext": "js,json,html",
+    "ignore": ["./dist/", "./src/", "./views/"],
+    "watch": [".env", "./**/*.js", "./**/*.json", "./**/*.html"],
+    "delay": "500"
+  },
   "scripts": {
     "clean": "rimraf ./dist && mkdirp 'dist' 'dist/css' 'dist/js' 'dist/img' 'dist/font'",
+    "js:other": "copyfiles -e \"src/js/**/_*.js\" -u 1 \"src/js/**/*.js\" dist",
     "js:main": "browserify src/js/main.js | uglifyjs > dist/js/main.js",
     "js:app": "browserify src/js/app.js | uglifyjs > dist/js/app.js",
-    "js:other": "copyfiles -u 1 src/js/**/* dist",
     "build:sass": "node-sass src/scss -o dist/css",
     "postbuild:sass": "postcss dist/css/*.css --use autoprefixer -d dist/css",
-    "build:js": "npm-run-all -p js:*",
-    "build:img": "copyfiles -u 1 src/img/**/* dist",
-    "build:font": "copyfiles -u 1 src/font/**/* dist",
-    "build:src": "copyfiles -u 1 src/* dist",
-    "watch:sass": "chokidar 'src/scss/**/*' -c 'npm run build:sass'",
-    "watch:js": "chokidar 'src/js/**/*' -c 'npm run build:js'",
-    "watch:img": "chokidar 'src/img/**/*' -c 'npm run build:img'",
-    "watch:font": "chokidar 'src/font/**/*' -c 'npm run build:font'",
-    "watch:src": "chokidar 'src/*' -c 'npm run build:src'",
+    "build:js": "npm-run-all -s js:other -p js:main js:app",
+    "build:img": "copyfiles -u 1 \"src/img/**/*\" dist",
+    "build:font": "copyfiles -u 1 \"src/font/**/*\" dist",
+    "build:src": "copyfiles -u 1 \"src/*\" dist",
+    "watch:sass": "chokidar \"src/scss/**/*\" -c yarn run build:sass",
+    "watch:js": "chokidar \"src/js/**/*\" -c yarn run build:js",
+    "watch:img": "chokidar \"src/img/**/*\" -c yarn run build:img",
+    "watch:font": "chokidar \"src/font/**/*\" -c yarn run build:font",
+    "watch:src": "chokidar \"src/*\" -c yarn run build:src",
     "build": "npm-run-all -s clean -p build:*",
     "watch": "npm-run-all -p watch:*",
-    "dev-run": "nodemon --ignore dist/ --ignore src/ --ignore views ./bin/www",
-    "dev": "npm run build && npm-run-all -p watch dev-run",
-    "predev": "npm config set scripts-prepend-node-path true",
+    "dev-run": "nodemon ./bin/www",
+    "dev": "yarn run build && npm-run-all -p watch dev-run",
+    "predev": "yarn config set scripts-prepend-node-path true",
     "start": "node ./bin/www",
-    "test": "mocha './test/**/*.js'",
-    "postinstall": "npm run build"
+    "test": "mocha \"./test/**/*.js\"",
+    "postinstall": "yarn run build"
   },
   "author": "Mike Fitzbaxter",
   "license": "ISC",
