Fixed npm issue on chokidar watching

--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "build:img": "copyfiles -u 1 \"src/img/**/*\" dist",
     "build:font": "copyfiles -u 1 \"src/font/**/*\" dist",
     "build:src": "copyfiles -u 1 \"src/*\" dist",
-    "watch:sass": "chokidar \"src/scss/**/*\" -c npm run build:sass",
-    "watch:js": "chokidar \"src/js/**/*\" -c npm run build:js",
-    "watch:img": "chokidar \"src/img/**/*\" -c npm run build:img",
-    "watch:font": "chokidar \"src/font/**/*\" -c npm run build:font",
-    "watch:src": "chokidar \"src/*\" -c npm run build:src",
+    "watch:sass": "chokidar \"src/scss/**/*\" -c \"npm-run-all -s build:sass\"",
+    "watch:js": "chokidar \"src/js/**/*\" -c \"npm-run-all -s build:js\"",
+    "watch:img": "chokidar \"src/img/**/*\" -c \"npm-run-all -s build:img\"",
+    "watch:font": "chokidar \"src/font/**/*\" -c \"npm-run-all -s build:font\"",
+    "watch:src": "chokidar \"src/*\" -c \"npm-run-all -s build:src\"",
     "build": "npm-run-all -s clean -p build:*",
     "watch": "npm-run-all -p watch:*",
     "dev-run": "nodemon ./bin/www",
